--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
        <li class="nav-item">
          <a class="nav-link  " href="#home" >Home</a>
        </li>
-       <li class="nav-item dropdown">
+       <li class="nav-item dropdown dropleft">
          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">About</a>
          <div class="dropdown-menu ">
            <a class="dropdown-item " href="#aboutme">About me</a>
