--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
        </li>
        <li class="nav-item dropdown dropleft">
          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">About</a>
-         <div class="dropdown-menu ">
+         <div class="dropdown-menu dropleft">
            <a class="dropdown-item " href="#aboutme">About me</a>
            <a class="dropdown-item" href="#portfolio"> My portfolio</a>
            <a class="dropdown-item" href="#resume">My resume</a>
