--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
        <li class="nav-item">
          <a class="nav-link  " href="#home" >Home</a>
        </li>
-       <li class="nav-item dropdown dropleft">
+       <li class="nav-item dropdown">
          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">About</a>
-         <div class="dropdown-menu dropleft">
+         <div class="dropdown-menu">
            <a class="dropdown-item " href="#aboutme">About me</a>
            <a class="dropdown-item" href="#portfolio"> My portfolio</a>
            <a class="dropdown-item" href="#resume">My resume</a>
