--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="fixed-top" >
         <div class="row text-white headcolor head">
             <div class="col-md-6 col-5  pt-2  ">
-                <h2 class="ak  pt-3" >Akhil V </h2>
+                <h2 class="ak  pt-3" >nandhana </h2>
             </div>
         
             <div class="col-md-6 col-7">
